[package]
name = "who-is-home"
version = "0.1.0"
authors = ["steve <sivanthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde = "1.0.103"
clap = "2.33.0"
fastping-rs = "0.1.5"
regex = "1.3.1"